Update and rename segundo lugar de prueba.html to Index.html

--- a/Index.html
+++ b/Index.html
@@ -258,8 +258,8 @@
     .player-2-info { right: 20px; }
 
     .player-info img {
-        width: 150px; /* Más ancho */
-        height: 120px; /* Más largo */
+        width: 170px; /* Más ancho */
+        height: 130px; /* Más largo */
         margin-right: 15px;
         box-shadow: none;
         border: none;
@@ -568,19 +568,19 @@
     
     <div class="contenedor" id="opciones-contenedor">
       <div class="boton" data-option="Q">
-        <div class="letra">Q</div>
+        <div class="letra">Q:A</div>
         <div class="texto" id="opcion-A">15</div>
       </div>
       <div class="boton" data-option="W">
-        <div class="letra">W</div>
+        <div class="letra">W:S</div>
         <div class="texto" id="opcion-B">12</div>
       </div>
       <div class="boton" data-option="E">
-        <div class="letra">E</div>
+        <div class="letra">E:D</div>
         <div class="texto" id="opcion-C">20</div>
       </div>
       <div class="boton" data-option="R">
-        <div class="letra">R</div>
+        <div class="letra">R:F</div>
         <div class="texto" id="opcion-D">8</div>
       </div>
     </div>
