--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
     </div>
 
     <div class="mathquiz-header">
-      <h1>MathQuiz de Matemáticas</h1>
+      <h1>MathQuiz</h1>
       <div class="nivel-box" id="nivel-box">Nivel: Fácil</div>
     </div>
     
